--- a/index.html
+++ b/index.html
@@ -1,1 +1,275 @@
-assetsware.com
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assetsware</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
+    <noscript>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap"/>
+    </noscript>
+    <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
+    <link href="css/font-awesome/css/all.min.css?ver=1.2.0" rel="stylesheet">
+    <link href="css/aos.css?ver=1.2.0" rel="stylesheet">
+    <link href="css/ekko-lightbox.css?ver=1.2.0" rel="stylesheet">
+    <link href="css/main.css?ver=1.2.0" rel="stylesheet">
+    <noscript>
+      <style type="text/css">
+        [data-aos] {
+            opacity: 1 !important;
+            transform: translate(0) scale(1) !important;
+        }
+      </style>
+    </noscript>
+  </head>
+  <body id="top">
+    <header class="d-flex flex-column">
+      <div class="container pt-4">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent px-0"><a class="text-white navbar-brand" href="#">Assetsware</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#da-navbarNav" aria-controls="da-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse text-uppercase" id="da-navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#features">Features</a></li>
+              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="da-home-page-text flex-grow-1 d-flex align-items-center" data-aos="fade-right" data-aos-duration="1000">
+        <div class="container">
+          <div class="col-md-10 col-sm-12 px-0 mx-0">
+            <h2 class="display-3 text-uppercase">Assets Tracking with QR Code</h2>
+            <h3 class="h4 mt-3">Simple • Easy • Quick</h3><a class="smooth-scroll btn btn-outline-light mt-4" href="#learn">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="page-content">
+      <div>
+<div class="da-section bg-secondary" id="learn">
+  <div class="container">
+      <div class="h3 pb-3 text-center text-white font-weight-bold" data-aos="fade-up">Track assets with QR code scan</div>
+      <p class="px-5 pb-3 text-center text-white" data-aos="fade-up">Our highly configurable and user-friendly Asset Tracking System combines web system, QR scanner, QR labels and mobile devices to track assets. Regardless of the organization, we can track any and all of your assets from acquisition to retirement.</p>
+  </div>
+</div>
+<div class="da-section bg-light" id="about">
+  <div class="da-services">
+    <div class="container text-center">
+      <div class="h3 pb-3 text-center font-weight-bold" data-aos="fade-up">Our Features</div>
+      <p class="px-5 pb-5 text-center" data-aos="fade-up">Take advantage of our simple yet distinctive features that will transform your business</p>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="500">
+              <div class="text-primary"><i class="pb-3 fas fa-band-aid fa-3x"></i>
+                <p class="font-weight-bold">Check In/Check Out</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="1000">
+              <div class="text-primary"><i class="pb-3 fas fa-history fa-3x"></i>
+                <p class="font-weight-bold">Full Lifecycle History</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="1500">
+              <div class="text-primary"><i class="pb-3 fas fa-qrcode fa-3x"></i>
+                <p class="font-weight-bold">QR Code Generation</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="2000">
+              <div class="text-primary"><i class="pb-3 fas fa-eye fa-3x"></i>
+                <p class="font-weight-bold">Reporting Access</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="500">
+              <div class="text-primary"><i class="pb-3 far fa-file-alt fa-3x"></i>
+                <p class="font-weight-bold">Custom report</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="1000">
+              <div class="text-primary"><i class="pb-3 fas fa-list fa-3x"></i>
+                <p class="font-weight-bold">Asset Listing View</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="1500">
+              <div class="text-primary"><i class="pb-3 fas fa-clock fa-3x"></i>
+                <p class="font-weight-bold">Real-Time Notification</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card mb-3">
+            <div class="card-body py-5" data-aos="zoom-in" data-aos-duration="2000">
+              <div class="text-primary"><i class="pb-3 fas fa-mobile-alt fa-3x"></i>
+                <p class="font-weight-bold">Mobile Application</p>
+              </div>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="da-projects" id="features">
+  <div class="row mx-0">
+    <div class="col-md-6 px-0 da-project-1" style="background-image: url('images/da-img-2.jpg')" data-aos="zoom-in"></div>
+    <div class="col-md-6 pl-5 pt-5 pb-3">
+      <h3 class="h3 mb-5 font-weight-bold">Track all your assets, from laptops to lawnmowers</h3>
+      <div class="row">
+        <div class="col-10">
+          <div class="h4">Our technology can be shaped to meet with your specific asset management needs</div>
+          <p>Every business is unique and so is its assets. We understand this problem so we designed asset management software that can track anything. We believe that excellent asset tracking leads to better performance - you keep your asset nice, you know where it should be, and you prevent losses and damages.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row mx-0">
+    <div class="col-md-6 pl-5 pt-5 pb-3">
+      <h3 class="h3 mb-5 font-weight-bold">Making it a breeze to track your assets</h3>
+      <div class="row">
+        <div class="col-10">
+          <div class="h4">Track your asset with QR code and a built-in QR code scanner</div>
+          <p>QR code tags are an easy way to provide assets with unique identifier. QR code helps to ensure that assets can be effortlessly located and identified at moment's notice. What's more, our QR codes can be easily printed at office with a thermal printer supplied together with the system.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 px-0 da-project-2" style="background-image: url('images/da-img-5.jpg')" data-aos="zoom-in"></div>
+  </div>
+</div>
+<div class="da-projects" id="features">
+  <div class="row mx-0">
+    <div class="col-md-6 px-0 da-project-1" style="background-image: url('images/da-img-2.jpg')" data-aos="zoom-in"></div>
+    <div class="col-md-6 pl-5 pt-5 pb-3">
+      <h3 class="h3 mb-5 font-weight-bold">Get asset reporting in an instance</h3>
+      <div class="row">
+        <div class="col-10">
+          <div class="h4">Our asset tracking software puts the whole picture at your fingertips</div>
+          <p>With Assetsware, you won't have to sift through cluttered files of assets records. With our asset reporting feature, you'll be able to get full asset details, its history and its location with a button click from our mobile application</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="da-contact" id="contact">
+  <div class="da-contact-detail" data-aos="zoom-in" data-aos-duration="1000">
+    <div class="container">
+      <div class="card py-4 px-4">
+        <div class="h4 pb-4">Interested? Request for a demo today!</div>
+        <div class="row">
+          <div class="col-md-7 col-sm-12 mb-3">
+            <div class="da-contact-message">
+              <form action="mailto:info@phisoft.my" method="POST">
+                <div class="row">
+                  <div class="col-md-6 col-sm-12 mb-3">
+                    <input class="mr-3 form-control" type="text" name="first-name" placeholder="*First Name" required="required"/>
+                  </div>
+                  <div class="col-md-6 col-sm-12 mb-3">
+                    <input class="form-control" type="text" name="last-name" placeholder="Last Name"/>
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <input class="form-control" type="text" name="Subject" placeholder="*Subject" required="required"/>
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <input class="form-control" type="email" name="_replyto" placeholder="*E-mail" required="required"/>
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <textarea class="form-control" name="message" placeholder="*Your Message" rows="4" required="required"></textarea>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <button class="btn btn-primary" type="submit">Send</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="col-md-5">
+            <p><b>We are located at:</b></p>
+            <p><b>Address:</b> H-8-10, Aeropod Commercial Square, Jalan Aeropod Off Jalan Kepayan, 88200 Kota Kinabalu, Sabah, MY.</p>
+            <p><b>Phone:</b> +60 12 866 9695</p>
+            <p><b>Email:</b> info@phisoft.my</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div></div>
+    </div>
+    <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12 col-md-12 col-sm-12">
+                  <ul class="social">
+                      <li><a href="https://www.facebook.com/phisoft.my/"><i class="fab fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/phisoft.my/"><i class="fab fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/company/phisoft-my/"><i class="fab fa-linkedin"></i></a></li>
+                      <!-- <li><a href="#"><i class="fa fa-rss"></i></a></li> -->
+                      <li><a href="https://www.phisoft.my/"><i class="fa fa-globe"></i></a></li>
+                  </ul>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-12">
+                  <p class="copyright">Copyright &copy; 2022 assetsware.com</p>
+              </div>
+          </div>
+      </div>
+  </footer>
+    <div id="scrolltop">
+      <button class="btn btn-primary"><span class="icon"><i class="fas fa-angle-up fa-2x"></i></span></button>
+    </div>
+    <script src="scripts/jquery.min.js?ver=1.2.0"></script>
+    <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
+    <script src="scripts/aos.js?ver=1.2.0"></script>
+    <script src="scripts/ekko-lightbox.min.js?ver=1.2.0"></script>
+    <script src="scripts/main.js?ver=1.2.0"></script>
+  </body>
+</html>
