--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p class="px-5 pb-3 text-center text-white" data-aos="fade-up">Our highly configurable and user-friendly Asset Tracking System combines web system, QR scanner, QR labels and mobile devices to track assets. Regardless of the organization, we can track any and all of your assets from acquisition to retirement.</p>
   </div>
 </div>
-<div class="da-section bg-light" id="about">
+<div class="da-section bg-light" id="features">
   <div class="da-services">
     <div class="container text-center">
       <div class="h3 pb-3 text-center font-weight-bold" data-aos="fade-up">Our Features</div>
@@ -150,9 +150,9 @@
     </div>
   </div>
 </div>
-<div class="da-projects" id="features">
-  <div class="row mx-0">
-    <div class="col-md-6 px-0 da-project-1" style="background-image: url('images/da-img-2.jpg')" data-aos="zoom-in"></div>
+<div class="da-projects" id="about">
+  <div class="row mx-0 d-flex align-items-center">
+    <div class="col-md-6 px-0 da-project-1" style="background-image: url('images/1.png')" data-aos="zoom-in"></div>
     <div class="col-md-6 pl-5 pt-5 pb-3">
       <h3 class="h3 mb-5 font-weight-bold">Track all your assets, from laptops to lawnmowers</h3>
       <div class="row">
@@ -163,7 +163,7 @@
       </div>
     </div>
   </div>
-  <div class="row mx-0">
+  <div class="row mx-0 d-flex align-items-center">
     <div class="col-md-6 pl-5 pt-5 pb-3">
       <h3 class="h3 mb-5 font-weight-bold">Making it a breeze to track your assets</h3>
       <div class="row">
@@ -173,12 +173,12 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6 px-0 da-project-2" style="background-image: url('images/da-img-5.jpg')" data-aos="zoom-in"></div>
+    <div class="col-md-6 px-0 da-project-2" style="background-image: url('images/2.png')" data-aos="zoom-in"></div>
   </div>
 </div>
 <div class="da-projects" id="features">
-  <div class="row mx-0">
-    <div class="col-md-6 px-0 da-project-1" style="background-image: url('images/da-img-2.jpg')" data-aos="zoom-in"></div>
+  <div class="row mx-0 d-flex align-items-center">
+    <div class="col-md-6 px-0 da-project-1" style="background-image: url('images/3.png')" data-aos="zoom-in"></div>
     <div class="col-md-6 pl-5 pt-5 pb-3">
       <h3 class="h3 mb-5 font-weight-bold">Get asset reporting in an instance</h3>
       <div class="row">
