--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AssetsWare - Asset Tracking with QRCode </title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
-    <noscript>
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap"/>
-    </noscript>
-    <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
-    <link href="css/font-awesome/css/all.min.css?ver=1.2.0" rel="stylesheet">
-    <link href="css/aos.css?ver=1.2.0" rel="stylesheet">
-    <link href="css/ekko-lightbox.css?ver=1.2.0" rel="stylesheet">
-    <link href="css/main.css?ver=1.2.0" rel="stylesheet">
-    <noscript>
-      <style type="text/css">
-        [data-aos] {
-            opacity: 1 !important;
-            transform: translate(0) scale(1) !important;
-        }
-      </style>
-    </noscript>
-  </head>
 
-  <body id="top">
-    <!-- Header -->
-    <header class="header-area header-sticky">
-      <div class="container">
-          <div class="row">
-              <div class="col-12">
-                  <nav class="main-nav">
-                      <!-- ***** Logo Start ***** -->
-                      <a href="#" class="logo">
-                          <img src="/images/logo.png" height="50" alt="Assetsware"/>
-                      </a>
-                      <!-- ***** Logo End ***** -->
-                      <!-- ***** Menu Start ***** -->
-                      <ul class="nav">
-                          <li><a href="#home" class="smooth-scroll active">Home</a></li>
-                          <li><a href="#learn" class="smooth-scroll">About</a></li>
-                          <li><a href="#features" class="smooth-scroll">Features</a></li>
-                          <li><a href="#contact" class="smooth-scroll">Contact Us</a></li>
-                      </ul>
-                      <a class='menu-trigger'>
-                          <span>Menu</span>
-                      </a>
-                      <!-- ***** Menu End ***** -->
-                  </nav>
-              </div>
-          </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AssetsWare - Asset Tracking with QRCode </title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap"
+    media="print" onload="this.media='all'" />
+  <noscript>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&amp;display=swap" />
+  </noscript>
+  <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
+  <link href="css/font-awesome/css/all.min.css?ver=1.2.0" rel="stylesheet">
+  <link href="css/aos.css?ver=1.2.0" rel="stylesheet">
+  <link href="css/ekko-lightbox.css?ver=1.2.0" rel="stylesheet">
+  <link href="css/main.css?ver=1.2.0" rel="stylesheet">
+  <noscript>
+    <style type="text/css">
+      [data-aos] {
+        opacity: 1 !important;
+        transform: translate(0) scale(1) !important;
+      }
+    </style>
+  </noscript>
+</head>
+
+<body id="top">
+  <!-- Header -->
+  <header class="header-area header-sticky">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="#" class="logo">
+              <img src="/images/logo.png" height="50" alt="Assetsware" />
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
+            <ul class="nav">
+              <li><a href="index.html#home" class="smooth-scroll active">Home</a></li>
+              <li><a href="index.html#learn" class="smooth-scroll">About</a></li>
+              <li><a href="index.html#features" class="smooth-scroll">Features</a></li>
+              <li><a href="index.html#contact" class="smooth-scroll">Contact Us</a></li>
+            </ul>
+            <a class='menu-trigger'>
+              <span>Menu</span>
+            </a>
+            <!-- ***** Menu End ***** -->
+          </nav>
+        </div>
       </div>
-    </header>
-    <!-- Header End -->
+    </div>
+  </header>
+  <!-- Header End -->
 
   <!-- Hero section -->
   <div class="d-flex flex-column hero-sec" id="home">
@@ -62,7 +66,8 @@
       <div class="container">
         <div class="col-md-10 col-sm-12 px-0 mx-0">
           <h2 class="display-3 text-uppercase">Assets Tracking with QR Code</h2>
-          <h3 class="h4 mt-3">Simple • Easy • Quick</h3><a class="smooth-scroll btn btn-outline-light mt-4" href="#learn">Learn More</a>
+          <h3 class="h4 mt-3">Simple • Easy • Quick</h3><a class="smooth-scroll btn btn-outline-light mt-4"
+            href="#learn">Learn More</a>
         </div>
       </div>
     </div>
@@ -72,8 +77,11 @@
   <!-- About section -->
   <div class="da-section bg-secondary" id="learn">
     <div class="container">
-        <div class="h3 pb-3 text-center text-white font-weight-bold" data-aos="fade-up">Track assets with QR code scan</div>
-        <p class="px-5 pb-3 text-center text-white " data-aos="fade-up">Our highly configurable and user-friendly Asset Tracking System combines web system, QR scanner, QR labels and mobile devices to track assets. Regardless of the organization, we can track any and all of your assets from acquisition to retirement.</p>
+      <div class="h3 pb-3 text-center text-white font-weight-bold" data-aos="fade-up">Track assets with QR code scan
+      </div>
+      <p class="px-5 pb-3 text-center text-white " data-aos="fade-up">Our highly configurable and user-friendly Asset
+        Tracking System combines web system, QR scanner, QR labels and mobile devices to track assets. Regardless of the
+        organization, we can track any and all of your assets from acquisition to retirement.</p>
     </div>
   </div>
   <!-- About section end-->
@@ -87,7 +95,9 @@
         <div class="row">
           <div class="col-10">
             <div class="h4">Our technology can be shaped to meet with your specific asset management needs</div>
-            <p>Every business is unique and so is its assets. We understand this problem so we designed asset management software that can track anything. We believe that excellent asset tracking leads to better performance - you keep your asset nice, you know where it should be, and you prevent losses and damages.</p>
+            <p>Every business is unique and so is its assets. We understand this problem so we designed asset management
+              software that can track anything. We believe that excellent asset tracking leads to better performance -
+              you keep your asset nice, you know where it should be, and you prevent losses and damages.</p>
           </div>
         </div>
       </div>
@@ -98,7 +108,9 @@
         <div class="row">
           <div class="col-10">
             <div class="h4">Track your asset with QR code and a built-in QR code scanner</div>
-            <p>QR code tags are an easy way to provide assets with unique identifier. QR code helps to ensure that assets can be effortlessly located and identified at moment's notice. What's more, our QR codes can be easily printed at office with a thermal printer supplied together with the system.</p>
+            <p>QR code tags are an easy way to provide assets with unique identifier. QR code helps to ensure that
+              assets can be effortlessly located and identified at moment's notice. What's more, our QR codes can be
+              easily printed at office with a thermal printer supplied together with the system.</p>
           </div>
         </div>
       </div>
@@ -113,7 +125,9 @@
         <div class="row">
           <div class="col-10">
             <div class="h4">Our asset tracking software puts the whole picture at your fingertips</div>
-            <p>With Assetsware, you won't have to sift through cluttered files of assets records. With our asset reporting feature, you'll be able to get full asset details, its history and its location with a button click from our mobile application</p>
+            <p>With Assetsware, you won't have to sift through cluttered files of assets records. With our asset
+              reporting feature, you'll be able to get full asset details, its history and its location with a button
+              click from our mobile application</p>
           </div>
         </div>
       </div>
@@ -126,7 +140,8 @@
     <div class="da-services">
       <div class="container text-center">
         <div class="h3 pb-3 text-center font-weight-bold" data-aos="fade-up">Our Features</div>
-        <p class="px-5 pb-5 text-center" data-aos="fade-up">Take advantage of our simple yet distinctive features that will transform your business</p>
+        <p class="px-5 pb-5 text-center" data-aos="fade-up">Take advantage of our simple yet distinctive features that
+          will transform your business</p>
 
         <div class="row">
           <div class="col-lg-3 col-md-6">
@@ -220,7 +235,7 @@
 
   <!-- Contact section -->
   <div class="da-contact" id="contact">
-    
+
     <div class="da-contact-detail" data-aos="zoom-in" data-aos-duration="1000">
       <div class="container">
         <div class="h3 pb-5 text-center font-weight-bold" data-aos="fade-up">Interested? Request for a demo today!</div>
@@ -231,25 +246,29 @@
                 <form action="mailto:info@phisoft.my" method="POST">
                   <div class="row">
                     <div class="col-md-6 col-sm-12 mb-3">
-                      <input class="mr-3 form-control" type="text" name="first-name" placeholder="*First Name" required="required"/>
+                      <input class="mr-3 form-control" type="text" name="first-name" placeholder="*First Name"
+                        required="required" />
                     </div>
                     <div class="col-md-6 col-sm-12 mb-3">
-                      <input class="form-control" type="text" name="last-name" placeholder="Last Name"/>
+                      <input class="form-control" type="text" name="last-name" placeholder="Last Name" />
                     </div>
                   </div>
                   <div class="row mb-3">
                     <div class="col">
-                      <input class="form-control" type="text" name="Subject" placeholder="*Subject" required="required"/>
+                      <input class="form-control" type="text" name="Subject" placeholder="*Subject"
+                        required="required" />
                     </div>
                   </div>
                   <div class="row mb-3">
                     <div class="col">
-                      <input class="form-control" type="email" name="_replyto" placeholder="*E-mail" required="required"/>
+                      <input class="form-control" type="email" name="_replyto" placeholder="*E-mail"
+                        required="required" />
                     </div>
                   </div>
                   <div class="row mb-3">
                     <div class="col">
-                      <textarea class="form-control" name="message" placeholder="*Your Message" rows="4" required="required"></textarea>
+                      <textarea class="form-control" name="message" placeholder="*Your Message" rows="4"
+                        required="required"></textarea>
                     </div>
                   </div>
                   <div class="row">
@@ -262,7 +281,8 @@
             </div>
             <div class="col-md-5">
               <p><b>We are located at:</b></p>
-              <p><b>Address:</b> H-8-10, Aeropod Commercial Square, Jalan Aeropod Off Jalan Kepayan, 88200 Kota Kinabalu, Sabah, MY.</p>
+              <p><b>Address:</b> H-8-10, Aeropod Commercial Square, Jalan Aeropod Off Jalan Kepayan, 88200 Kota
+                Kinabalu, Sabah, MY.</p>
               <p><b>Phone:</b> +60 12 866 9695</p>
               <p><b>Email:</b> info@phisoft.my</p>
             </div>
@@ -275,24 +295,24 @@
     <!-- Footer section -->
     <footer>
       <div class="container">
-          <div class="row">
-              <div class="col-lg-12 col-md-12 col-sm-12">
-                  <ul class="social">
-                      <li><a href="https://www.facebook.com/phisoft.my/"><i class="fab fa-facebook"></i></a></li>
-                      <li><a href="https://www.instagram.com/phisoft.my/"><i class="fab fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/company/phisoft-my/"><i class="fab fa-linkedin"></i></a></li>
-                      <li><a href="https://www.phisoft.my/"><i class="fa fa-globe"></i></a></li>
-                  </ul>
-              </div>
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <ul class="social">
+              <li><a href="https://www.facebook.com/phisoft.my/"><i class="fab fa-facebook"></i></a></li>
+              <li><a href="https://www.instagram.com/phisoft.my/"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company/phisoft-my/"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="https://www.phisoft.my/"><i class="fa fa-globe"></i></a></li>
+            </ul>
           </div>
-          <div class="row">
-              <div class="col-lg-12">
-                  <p class="copyright">Copyright &copy; 2022 assetsware.com</p>
-              </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <p class="copyright">Copyright &copy; 2022 assetsware.com</p>
           </div>
+        </div>
       </div>
-  </footer>
-  <!-- Footer section end -->
+    </footer>
+    <!-- Footer section end -->
 
     <div id="scrolltop">
       <button class="btn btn-primary"><span class="icon"><i class="fas fa-angle-up fa-2x"></i></span></button>
@@ -305,5 +325,6 @@
     <script src="scripts/scrollreveal.min.js"></script>
     <script src="scripts/custom.js"></script>
 
-  </body>
+</body>
+
 </html>
