--- a/index.html
+++ b/index.html
@@ -76,34 +76,24 @@ https://www.tooplate.com/view/2115-marvel
         <div class="container">
             <div class="row">
                 
-                <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
+                <div class="col-lg-4 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <!-- <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small> -->
-
-                        <h1 class="d-flex flex-wrap assetsware-primary">
+                        <h1 class="assetsware-primary">
                           Assets Tracking<br>with QR Code
                         </h1>
                         <h5 class="assetsware-secondary">
                           Simple / Quick / Easy
                         </h5>
-                        <!-- <h5 class="animated animated-text">
-                          <div class="animated-info">
-                              <span class="animated-item">Marvel Sann</span>
-                              <span class="animated-item">Web Designer</span>
-                              <span class="animated-item">UI Specialist</span>
-                          </div>
-                        </h5> -->
-
                         <div class="custom-btn-group mt-4">
-                          <!-- <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a> -->
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Learn More</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-5 col-md-12 col-12">
+                <div class="col-lg-8 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/banner/assetsware-statistic.png" class="img-fluid" alt="svg image">
+                        <img src="images/banner/assetsware-banner.svg" class="img-fluid" alt="Assetsware">
                     </div>
                 </div>
 
