--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
             <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-section carousel-item active clip-bg pt-225 pb-200 img-bg"
-                        style="background-image: url('assets/img/carousel/header.png');">
+                        style="background-image: url('assets/img/carousel/1.svg');">
                         <div class="container">
                             <div class="row">
-                                <div class="col sm 12">
-                                    <div class="carousel-content text-center">
+                                <div class="col sm 3" >
+                                    <div class="carousel-content text-left">
                                         <div class="section-title">
-                                            <h2 class="text-white" style="font-size: 3.3em;">ASSETS TRACKING WITH QR CODE</h2>
-                                            <div class="div-line"></div>
+                                            <h2 class="text-white" style="font-size: 2.5em;">ASSETS TRACKING WITH QR CODE</h2>
+                                            <br><br>
                                             <p class="text-white" style="font-size: 2.0em;">Simple • Easy • Quick</p>
                                         </div>
 
