--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <i class="lni lni-layers"></i>
                             </div>
                             <div class="box-content-style feature-content">
-                                <h4>Instanly get asset reporting </h4>
+                                <h4>Instantly get asset reporting </h4>
                                 <p>With Assetsware, you won't have to sift through cluttered files of asset records. With our asset reporting feature, you will be able to get full asset details, history, 
                                     and location with just a button click from our mobile application. —an easy and effortless viewing report on the smartphone.</p>
                             </div>
