--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             <div class="col-12 col-md-6 col-xl-12">
                                 <div class="contact-item">
                                     <div class="contact-icon">
-                                        <i class="lni lni-map-marker"></i>
+                                        <i class="lni lni-map-marker icon-custom"></i>
                                     </div>
                                     <div class="contact-content">
                                         <h4>Address</h4>
@@ -511,27 +511,27 @@
     <!-- ========================= contact-section end ========================= -->
 
     <!-- ========================= footer start ========================= -->
-    <footer class="footer pt-100">
+    <footer class="footer pt-30 pb-15">
         <div class="container">
 
             <div class="copyright-area">
                 <div class="row align-items-center">
-                    <div class="col-6">
+                    <div class="col-12">
                         <div class="footer-social-links">
-                            <ul class="d-flex">
-                                <li><a href="https://www.facebook.com/phisoft.my/"><i
-                                            class="lni lni-facebook-original"></i></a></li>
-                                <li><a href="https://www.instagram.com/phisoft.my/"><i
-                                            class="lni lni-twitter-original"></i></a></li>
-                                <li><a href="https://www.linkedin.com/company/phisoft-my/"><i
-                                            class="lni lni-linkedin-original"></i></a></li>
-                                <li><a href="https://www.phisoft.my/"><i class="lni lni-instagram-original"></i></a>
+                            <ul class="d-flex justify-content-center">
+                                <li class="wow fadeInUp" data-wow-delay=".3s"><a href="https://www.facebook.com/phisoft.my/"><i
+                                            class="lni custom-lni lni-facebook-original"></i></a></li>
+                                <li class="wow fadeInUp" data-wow-delay=".4s"><a href="https://www.instagram.com/phisoft.my/"><i
+                                            class="lni custom-lni lni-instagram-original"></i></a></li>
+                                <li class="wow fadeInUp" data-wow-delay=".5s"><a href="https://www.linkedin.com/company/phisoft-my/"><i
+                                            class="lni custom-lni lni-linkedin-original"></i></a></li>
+                                <li class="wow fadeInUp" data-wow-delay=".6s"><a href="https://www.phisoft.my/"><i class="lni custom-lni lni lni-world"></i></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-12 pt-4">
                         <p class="wow fadeInUp" data-wow-delay=".3s">COPYRIGHT © 2022 ASSETSWARE.COM</p>
                     </div>
                 </div>
