Change header color #20

--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
     <section id="home">
         <div class="container">
             <div class="row flex-wrap-reverse">
-                <div class="col-lg-6 wow fadeInUp mt-5 mt-lg-5">
+                <div class="col-lg-6  mt-5 mt-lg-5">
                     <div class="section-title">
-                        <h2 style="font-size: 2.5em; color: #051441;">ASSETS TRACKING WITH <br> QR CODE
+                        <h2 class="wow fadeInLeft" data-wow-delay=".4s" style="font-size: 2.5em; color: #051441;">ASSETS TRACKING WITH <br> QR CODE
                         </h2>
                         <br>
-                        <p style="font-size: 2.0em; color: #051441;">Simple • Easy • Quick</p>
+                        <p class="wow fadeInLeft" data-wow-delay=".6s" style="font-size: 2.0em; color: #051441;">Simple • Easy • Quick</p>
                         <br>
                     </div>
                     <div class="pt-4">
-                        <a href="#about" class="btn btn-clean">Read more</a>
+                        <a href="#about" class=" btn-lg btn-primary custom-btn wow fadeInLeft" data-wow-delay=".8s">Read more</a>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay=".9s">
                     <img src="/assets/img/carousel/monitor.png" alt="image" class="img-fluid">
                 </div>
             </div>
