add  Website SEO and update missing image on features section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Assetsware - Asset Tracking with QRCode</title>
+    <title>Assetsware - Asset Tracking with QR Code</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon_ori.png">
+    <!-- Web SEO -->
+    <meta name="description"
+        content="Assetsware is a system for asset monitoring and inventory management using QR Code that can assist in streamlining your operations." />
+    <meta name="keywords"
+        content="Asset monitoring management, inventory management, Asset Tracking with QR Code, Asset Management System with QR code, Inventory System and Asset Tracking Solution, QR code Scan and Track, Assets QR code, Mobile CMMS, Assets maintenance, QR codes for Inventory Systems and Asset Tracking Solutions">
+    <meta name=" robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <meta property="og:title" content="QR Inventory System and Asset Tracking | ASAP Systems" />
+    <meta property="og:description"
+        content="Assetsware is a system for asset monitoring and inventory management that can assist in streamlining your operations." />
+    <meta property="og:url" content="https://www.assetsware.com/" />
+    <meta property="og:site_name" content="Assetsware - Asset Tracking with QR Code" />
+
     <!-- Place favicon.ico in the root directory -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon_ori.png">
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha.min.css">
@@ -93,14 +107,19 @@
             <div class="row flex-wrap-reverse">
                 <div class="col-lg-6  mt-5 mt-lg-5">
                     <div class="section-title">
-                        <h2 class="wow fadeInLeft" data-wow-delay=".4s" style="font-size: 2.5em; color: #051441;">ASSETS TRACKING WITH <br> QR CODE
-                        </h2>
+                        <h1 class="wow fadeInLeft fs-40 color-darkblue" data-wow-delay=".4s">
+                            ASSETS
+                            TRACKING WITH <br> QR CODE
+                        </h1>
                         <br>
-                        <p class="wow fadeInLeft" data-wow-delay=".6s" style="font-size: 2.0em; color: #051441;">Simple • Easy • Quick</p>
+                        <p class="wow fadeInLeft fs-32 color-darkblue" data-wow-delay=".6s">
+                            Simple
+                            • Easy • Quick</p>
                         <br>
                     </div>
                     <div class="pt-4">
-                        <a href="#about" class=" btn-lg btn-primary custom-btn wow fadeInLeft" data-wow-delay=".8s">Read more</a>
+                        <a href="#about" class=" btn-lg btn-primary custom-btn wow fadeInLeft" data-wow-delay=".8s">Read
+                            more</a>
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay=".9s">
@@ -133,7 +152,7 @@
                             <i class="lni lni-magnifier"></i>
                         </div>
                         <div class="box-content-style feature-content">
-                            <h4>Track all your assets</h4>
+                            <h2>Track all your assets</h2>
                             <p>Every business is unique, and so are its assets. We understand this problem, so we
                                 designed asset management software to track anything.
                                 We believe that excellent asset tracking leads to better performance - you keep your
@@ -147,7 +166,7 @@
                             <i class="lni lni-bolt"></i>
                         </div>
                         <div class="box-content-style feature-content">
-                            <h4>Easy to track your assets</h4>
+                            <h2>Easy to track your assets</h2>
                             <p>QR code tags are easy to provide assets with a unique identifier. QR code helps ensure
                                 that assets can be effortlessly located and identified at a moment's notice.
                                 Our QR codes can be easily printed at the office with a thermal printer supplied
@@ -161,7 +180,7 @@
                             <i class="lni lni-layers"></i>
                         </div>
                         <div class="box-content-style feature-content">
-                            <h4>Instantly get asset reporting </h4>
+                            <h2>Instantly get asset reporting </h2>
                             <p>With Assetsware, you won't have to sift through cluttered files of asset records. With
                                 our asset reporting feature, you will be able to get full asset details, history,
                                 and location with just a button click from our mobile application. —an easy and
@@ -188,7 +207,7 @@
                 </div>
 
 
-                <div class="row">
+                <div class="row justify-content-around">
                     <div class="col-md-3 without-padding">
                         <div class="left-features-services">
                             <ul class="features-list">
@@ -237,9 +256,12 @@
                         </div> <!-- end left-features-service -->
                     </div><!--  end col-md-3 -->
 
-                    <div class="col-md-6">
-                        <div class="features-image animated out" data-animation="fadeInUp" data-delay="0">
-                            <img src="assets/img/carousel/headerAssets.png" width="100%" height="auto" alt="">
+                    <div class="col-md-5 d-flex">
+                        <div class="features-image animated out d-flex align-items-center" data-animation="fadeInUp"
+                            data-delay="0">
+                            <img class="img-fluid d-inline align-items-center"
+                                src="assets/img/carousel/headerAssets.png" width="100%" height="auto"
+                                alt="assetsware system">
                         </div> <!-- end features-image -->
                     </div> <!-- end col-md-6 -->
 
@@ -315,7 +337,7 @@
                                     <div class="box-icon-style">
                                         <i class="fa fa-home"></i>
                                     </div>
-                                    <h4 class="mb-10">Assetsware Dashboard</h4>
+                                    <h2 class="mb-10">Assetsware Dashboard</h2>
                                     <p>The Admin can view the overall inspection status and assets under maintenance in
                                         the Dashboard.
                                         To create a new asset, Admin can click the Assets option in the navigation bar.
@@ -325,7 +347,7 @@
                             <div class="col-lg-2"></div>
                             <div class="col-lg-5">
                                 <div class="timeline-img">
-                                    <img src="assets/img/Gallery/1.png" alt="">
+                                    <img src="assets/img/Gallery/1.png" alt="assetsware dashboard">
                                 </div>
                             </div>
                         </div>
@@ -336,7 +358,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-5">
                                 <div class="timeline-img">
-                                    <img src="assets/img/Gallery/2.png" alt="">
+                                    <img src="assets/img/Gallery/2.png" alt="assetsware listing">
                                 </div>
                             </div>
                             <div class="col-lg-2"></div>
@@ -345,7 +367,7 @@
                                     <div class="box-icon-style">
                                         <i class="fa fa-list-ul"></i>
                                     </div>
-                                    <h4 class="mb-10">Assets Listing</h4>
+                                    <h2 class="mb-10">Assets Listing</h2>
                                     <p>On the Assets page, the admin will see the list of assets that have been added.
                                         To create a new asset, the admin can click the Create button on the top-left of
                                         the Assets page.
@@ -363,7 +385,7 @@
                                     <div class="box-icon-style">
                                         <i class="fa fa-plus"></i>
                                     </div>
-                                    <h4 class="mb-10">Creating New Asset</h4>
+                                    <h2 class="mb-10">Creating New Asset</h2>
                                     <p>Admin needs to fill in the required details. After the details are completed,
                                         the data can be saved by clicking the save button on the top-left of the page.
                                         QR Code will be generated for the new asset. </p>
@@ -372,7 +394,7 @@
                             <div class="col-lg-2"></div>
                             <div class="col-lg-5">
                                 <div class="timeline-img">
-                                    <img src="assets/img/Gallery/3.png" alt="">
+                                    <img src="assets/img/Gallery/3.png" alt="assetsware create new assets">
                                 </div>
                             </div>
                         </div>
@@ -383,7 +405,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-5">
                                 <div class="timeline-img">
-                                    <img src="assets/img/Gallery/4.png" alt="">
+                                    <img src="assets/img/Gallery/4.png" alt="assetsware QR Code">
                                 </div>
                             </div>
                             <div class="col-lg-2"></div>
@@ -392,7 +414,7 @@
                                     <div class="box-icon-style">
                                         <i class="fa fa-qrcode"></i>
                                     </div>
-                                    <h4 class="mb-10">Asset's QR Code</h4>
+                                    <h2 class="mb-10">Asset's QR Code</h2>
                                     <p>Admin can get the asset's QR Code on the Assets page.
                                         Admin can click the asset, and the Print QR Tag button will be shown on the
                                         top-left of the page.
@@ -519,13 +541,17 @@
                     <div class="col-12">
                         <div class="footer-social-links">
                             <ul class="d-flex justify-content-center">
-                                <li class="wow fadeInUp" data-wow-delay=".3s"><a href="https://www.facebook.com/phisoft.my/"><i
+                                <li class="wow fadeInUp" data-wow-delay=".3s"><a
+                                        href="https://www.facebook.com/phisoft.my/"><i
                                             class="lni custom-lni lni-facebook-original"></i></a></li>
-                                <li class="wow fadeInUp" data-wow-delay=".4s"><a href="https://www.instagram.com/phisoft.my/"><i
+                                <li class="wow fadeInUp" data-wow-delay=".4s"><a
+                                        href="https://www.instagram.com/phisoft.my/"><i
                                             class="lni custom-lni lni-instagram-original"></i></a></li>
-                                <li class="wow fadeInUp" data-wow-delay=".5s"><a href="https://www.linkedin.com/company/phisoft-my/"><i
+                                <li class="wow fadeInUp" data-wow-delay=".5s"><a
+                                        href="https://www.linkedin.com/company/phisoft-my/"><i
                                             class="lni custom-lni lni-linkedin-original"></i></a></li>
-                                <li class="wow fadeInUp" data-wow-delay=".6s"><a href="https://www.phisoft.my/"><i class="lni custom-lni lni lni-world"></i></a>
+                                <li class="wow fadeInUp" data-wow-delay=".6s"><a href="https://www.phisoft.my/"><i
+                                            class="lni custom-lni lni lni-world"></i></a>
                                 </li>
                             </ul>
                         </div>
