update hero section

--- a/index.html
+++ b/index.html
@@ -60,65 +60,65 @@
     </div>
     <!-- preloader end -->
 
-    <!-- ========================= header start ========================= -->
-    <header class="header navbar-area bg-white">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/logo/assetsware_ori.svg" alt="Logo">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="toggler-icon"></span>
-                            <span class="toggler-icon"></span>
-                            <span class="toggler-icon"></span>
-                        </button>
 
-                        <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
-                            <ul id="nav" class="navbar-nav ml-auto">
-                                <li class="nav-item">
-                                    <a class="page-scroll active" href="#home">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="page-scroll" href="#about">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="page-scroll" href="#features">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="page-scroll" href="#contact">Contact</a>
-                                </li>
-                            </ul>
-                        </div> <!-- navbar collapse -->
-                    </nav> <!-- navbar -->
-                </div>
-            </div> <!-- row -->
-        </div> <!-- container -->
 
-    </header>
-    <!-- ========================= header end ========================= -->
+
 
     <!-- ========================= carousel-section Start ========================= -->
     <section id="home">
-        <div class="container">
+        <!-- ========================= header start ========================= -->
+        <header class="header navbar-area">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-12">
+                        <nav class="navbar navbar-expand-lg">
+                            <a class="navbar-brand" href="index.html">
+                                <img src="assets/img/logo/assetsware_ori.svg" alt="Logo">
+                            </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="toggler-icon"></span>
+                                <span class="toggler-icon"></span>
+                                <span class="toggler-icon"></span>
+                            </button>
+
+                            <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
+                                <ul id="nav" class="navbar-nav ml-auto">
+                                    <li class="nav-item">
+                                        <a class="page-scroll active" href="#home">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="page-scroll" href="#about">About</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="page-scroll" href="#features">Features</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="page-scroll" href="#contact">Contact</a>
+                                    </li>
+                                </ul>
+                            </div> <!-- navbar collapse -->
+                        </nav> <!-- navbar -->
+                    </div>
+                </div> <!-- row -->
+            </div> <!-- container -->
+        </header>
+        <!-- ========================= header end ========================= -->
+        <div class="container" id="hero">
             <div class="row flex-wrap-reverse">
                 <div class="col-lg-6  mt-5 mt-lg-5">
                     <div class="section-title">
-                        <h1 class="wow fadeInLeft fs-40 color-darkblue" data-wow-delay=".4s">
-                            ASSETS
-                            TRACKING WITH <br> QR CODE
+                        <h1 class="wow fadeInLeft" data-wow-delay=".4s"> <span
+                                class="fs-80 clr-secondary">ASSETS</span><span class="fs-80 clr-primary">WARE</span>
                         </h1>
                         <br>
-                        <p class="wow fadeInLeft fs-32 color-darkblue" data-wow-delay=".6s">
-                            Simple
-                            • Easy • Quick</p>
+                        <p class="wow fadeInLeft fs-26 color-darkblue" data-wow-delay=".6s">
+                            Simple, easy, and quick assets tracking <br><br> with QR Code</p>
                         <br>
                     </div>
                     <div class="pt-4">
-                        <a href="#about" class=" btn-lg btn-primary custom-btn wow fadeInLeft" data-wow-delay=".8s">Read
+                        <a href="#about" class=" btn-lg btn-primary wow fadeInLeft" data-wow-delay=".8s">Read
                             more</a>
                     </div>
                 </div>
