update email and phone no

--- a/index.html
+++ b/index.html
@@ -105,27 +105,35 @@
             </div> <!-- container -->
         </header>
         <!-- ========================= header end ========================= -->
-        <div class="container" id="hero">
-            <div class="row flex-wrap-reverse">
-                <div class="col-lg-6  mt-5 mt-lg-5">
-                    <div class="section-title">
-                        <h1 class="wow fadeInLeft" data-wow-delay=".4s"> <span
-                                class="fs-80 clr-secondary">ASSETS</span><span class="fs-80 clr-primary">WARE</span>
-                        </h1>
-                        <br>
-                        <p class="wow fadeInLeft fs-26 color-darkblue" data-wow-delay=".6s">
-                            Simple, easy, and quick assets tracking <br><br> with QR Code</p>
-                        <br>
+        <div class="d-flex align-items-center " id="hero">
+            <div class="container">
+                <div class="row mb-5 mb-lg-5">
+                    <div class="col-lg-6  mt-4 mt-lg-5  order-1 order-lg-0">
+                        <div class="section-title">
+                            <h2 class="wow fadeInLeft text-center text-lg-left" data-wow-delay=".4s"> <span
+                                    class="fs-lg-80 clr-secondary">ASSETS</span><span
+                                    class="fs-lg-80 clr-primary">WARE</span>
+                            </h2>
+                            <div class="col-lg-9">
+                                <p class="wow fadeInLeft fs-lg-26 color-darkblue lh-2 text-center text-lg-left"
+                                    data-wow-delay=".6s">
+                                    Simple, easy, and quick assets tracking with QR Code</p>
+                            </div>
+
+                        </div>
+                        <div
+                            class="mt-3 pt-lg-4 d-flex justify-content-center justify-content-lg-start btn-sm-primary rounded">
+                            <a href="#about" class="btn-lg btn-primary wow fadeInLeft fs-lg-20"
+                                data-wow-delay=".8s">Read
+                                more</a>
+                        </div>
                     </div>
-                    <div class="pt-4">
-                        <a href="#about" class=" btn-lg btn-primary wow fadeInLeft" data-wow-delay=".8s">Read
-                            more</a>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay=".9s">
+                        <img src="/assets/img/carousel/monitor.png" alt="image" class="img-fluid">
                     </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay=".9s">
-                    <img src="/assets/img/carousel/monitor.png" alt="image" class="img-fluid">
                 </div>
             </div>
+
     </section>
     <!-- ========================= carousel-section end ========================= -->
 
@@ -446,8 +454,8 @@
                                     </div>
                                     <div class="contact-content">
                                         <h4>Contact</h4>
-                                        <p>+60 12 866 9695</p>
-                                        <p>info@phisoft.my</p>
+                                        <p>+6 012 873 1819</p>
+                                        <p>hello@phisoft.my</p>
                                     </div>
                                 </div>
                             </div>
