add whatsapp button

--- a/privacy.html
+++ b/privacy.html
@@ -251,7 +251,7 @@
                     <div class="col-md-6">
                         <ul class="footer-legal">
                             <li><a href="privacy.html">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="toc.html">Terms of Service</a></li>
                         </ul>
                     </div>
                 </div>
@@ -262,6 +262,12 @@
     <!-- Scroll Top -->
     <a href="#" class="scroll-top">
         <i class="fa fa-arrow-up"></i>
+    </a>
+
+    <!-- WhatsApp Float Button -->
+    <a href="https://wa.me/60128731819" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+        <i class="fa fa-whatsapp"></i>
+        <span class="whatsapp-text">Contact Us</span>
     </a>
 
     <!-- JS -->
