--- a/toc.html
+++ b/toc.html
@@ -1,4 +1,4 @@
-<!doctype html>
+n <!doctype html>
 <html lang="en">
 
 <head>
@@ -252,6 +252,12 @@
     <!-- Scroll Top -->
     <a href="#" class="scroll-top">
         <i class="fa fa-arrow-up"></i>
+    </a>
+
+    <!-- WhatsApp Float Button -->
+    <a href="https://wa.me/60128731819" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+        <i class="fa fa-whatsapp"></i>
+        <span class="whatsapp-text">Contact Us</span>
     </a>
 
     <!-- JS -->
