--- a/index.html
+++ b/index.html
@@ -613,6 +613,12 @@
         <i class="fa fa-arrow-up"></i>
     </a>
 
+    <!-- WhatsApp Float Button -->
+    <a href="https://wa.me/60128731819" class="whatsapp-float" target="_blank" rel="noopener noreferrer">
+        <i class="fa fa-whatsapp"></i>
+        <span class="whatsapp-text">Contact Us</span>
+    </a>
+
     <!-- JS here -->
     <script src="assets/js/bootstrap.bundle-5.0.0.alpha-min.js"></script>
     <script src="assets/js/count-up.min.js"></script>
