remove company from footer

--- a/toc.html
+++ b/toc.html
@@ -1,4 +1,4 @@
-n <!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -196,17 +196,6 @@ n <!doctype html>
                                 <li><a href="index.html#how-it-works">How It Works</a></li>
                                 <li><a href="#">Pricing</a></li>
                                 <li><a href="#">Mobile App</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-6">
-                        <div class="footer-widget">
-                            <h4>Company</h4>
-                            <ul class="footer-links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Careers</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="index.html#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
