--- a/index.html
+++ b/index.html
@@ -4,21 +4,88 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Assetsware - Smart Asset Tracking with QR Code</title>
-    <meta name="description" content="Assetsware is a modern asset tracking and inventory management system using QR Code technology. Streamline your operations with ease.">
+    <title>Assetsware - Smart Asset Tracking with QR Code | Asset Management System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#284246">
+    <meta name="author" content="PHISOFT">
+    <link rel="canonical" href="https://www.assetsware.com/">
 
-    <!-- SEO -->
-    <meta name="description" content="Assetsware is a system for asset monitoring and inventory management using QR Code that can assist in streamlining your operations." />
-    <meta name="keywords" content="Asset monitoring management, inventory management, Asset Tracking with QR Code, Asset Management System with QR code, Inventory System and Asset Tracking Solution, QR code Scan and Track, Assets QR code, Mobile CMMS, Assets maintenance, QR codes for Inventory Systems and Asset Tracking Solutions">
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="Assetsware - Smart Asset Tracking with QR Code" />
-    <meta property="og:description" content="Assetsware is a system for asset monitoring and inventory management that can assist in streamlining your operations." />
-    <meta property="og:url" content="https://www.assetsware.com/" />
-    <meta property="og:site_name" content="Assetsware - Asset Tracking with QR Code" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Assetsware - Smart Asset Tracking with QR Code | Asset Management System">
+    <meta name="description" content="Assetsware is a modern asset tracking and inventory management system using QR Code technology. Track, manage, and monitor all your assets in one place. Save time, reduce costs, and eliminate losses.">
+    <meta name="keywords" content="asset tracking, asset management, QR code tracking, inventory management, QR code asset management, asset tracking system, mobile asset management, CMMS, asset maintenance, QR code scanner, asset inventory, equipment tracking, IT asset management, fixed asset tracking">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.assetsware.com/">
+    <meta property="og:title" content="Assetsware - Smart Asset Tracking with QR Code">
+    <meta property="og:description" content="Track, manage, and monitor all your assets in one place with our powerful QR Code-based asset management system. Save time, reduce costs, and eliminate losses.">
+    <meta property="og:image" content="https://www.assetsware.com/assets/img/logo/assetsware_ori.png">
+    <meta property="og:site_name" content="Assetsware">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.assetsware.com/">
+    <meta property="twitter:title" content="Assetsware - Smart Asset Tracking with QR Code">
+    <meta property="twitter:description" content="Track, manage, and monitor all your assets in one place with our powerful QR Code-based asset management system.">
+    <meta property="twitter:image" content="https://www.assetsware.com/assets/img/logo/assetsware_ori.png">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon_ori.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/logo/icon_ori.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logo/icon_ori.png">
+    <link rel="apple-touch-icon" href="assets/img/logo/icon_ori.png">
+
+    <!-- Structured Data - Organization -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Assetsware",
+        "description": "Smart asset tracking and inventory management system using QR Code technology",
+        "url": "https://www.assetsware.com",
+        "logo": "https://www.assetsware.com/assets/img/logo/assetsware_ori.svg",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+6-012-873-1819",
+            "contactType": "sales",
+            "email": "hello@phisoft.my"
+        },
+        "sameAs": [
+            "https://www.facebook.com/phisoft.my",
+            "https://www.instagram.com/phisoft.my",
+            "https://www.linkedin.com/company/phisoft-my"
+        ]
+    }
+    </script>
+
+    <!-- Structured Data - SoftwareApplication -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Assetsware",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Web, iOS, Android",
+        "description": "Modern asset tracking and inventory management system using QR Code technology",
+        "url": "https://www.assetsware.com",
+        "image": "https://www.assetsware.com/assets/img/logo/assetsware_ori.svg",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD",
+            "availability": "https://schema.org/InStock"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "reviewCount": "500"
+        }
+    }
+    </script>
 
     <!-- ========================= CSS here ========================= -->
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha.min.css">
