--- a/privacy.html
+++ b/privacy.html
@@ -4,12 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Privacy Policy - Assetsware</title>
-    <meta name="description" content="Assetsware Privacy Policy - Learn how we protect your data and privacy.">
+    <title>Privacy Policy - Assetsware | Data Protection & Privacy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#284246">
+    <meta name="author" content="PHISOFT">
+    <link rel="canonical" href="https://www.assetsware.com/privacy.html">
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Privacy Policy - Assetsware | Data Protection">
+    <meta name="description" content="Read Assetsware's Privacy Policy to understand how we collect, use, and protect your personal information. We are committed to safeguarding your data.">
+    <meta name="keywords" content="privacy policy, data protection, data privacy, personal information, GDPR, asset management, QR code tracking">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.assetsware.com/privacy.html">
+    <meta property="og:title" content="Privacy Policy - Assetsware">
+    <meta property="og:description" content="Read our Privacy Policy to understand how we protect your data.">
+    <meta property="og:site_name" content="Assetsware">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon_ori.png">
+    <link rel="canonical" href="https://www.assetsware.com/privacy.html">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha.min.css">
