--- a/toc.html
+++ b/toc.html
@@ -4,12 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Terms of Service - Assetsware</title>
-    <meta name="description" content="Assetsware Terms of Service - Terms and conditions for using our services.">
+    <title>Terms of Service - Assetsware | Terms & Conditions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#284246">
+    <meta name="author" content="PHISOFT">
+    <link rel="canonical" href="https://www.assetsware.com/toc.html">
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Terms of Service - Assetsware | Terms & Conditions">
+    <meta name="description" content="Read Assetsware's Terms of Service to understand the terms and conditions for using our asset tracking and management system.">
+    <meta name="keywords" content="terms of service, terms and conditions, user agreement, asset management software, QR code tracking">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.assetsware.com/toc.html">
+    <meta property="og:title" content="Terms of Service - Assetsware">
+    <meta property="og:description" content="Read our Terms of Service to understand the terms and conditions.">
+    <meta property="og:site_name" content="Assetsware">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon_ori.png">
+    <link rel="canonical" href="https://www.assetsware.com/toc.html">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha.min.css">
